# langtons_ant

./: .gitignore  README.md  pyproject.toml
src/langtons_ant/: __init__.py  basic.py  langton_ant_basic.py  multi_state.py
