[project]
name = "langtons-ant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Ashford", email = "james.ashford@genomics.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mediapy>=1.2.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[project.scripts]
langtons-ant = "langtons_ant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
